--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
             <i class="fa fa-bars"></i>
         </label>
         <ul class="c">
-            <li><img src="C:\Users\Superuser\Desktop\New folder\zoho\image\c.jpeg.jpeg" width="150px" height="50px"></li>
+            <li><img src="C:\Users\Superuser\Desktop\New folder\zoho\c.jpeg.jpeg" width="150px" height="50px"></li>
          </ul>
         
          <ul>   
