--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <i class="fa fa-bars"></i>
         </label>
         <ul class="c">
-            <li><img src="C:\Users\Superuser\Desktop\New folder\zoho\c.jpeg.jpeg" width="150px" height="50px"></li>
+            <li><img src="c.jpeg.jpeg" width="150px" height="50px"></li>
          </ul>
          <ul>   
             <li><a href="#"><font color="red">HOME</font></a></li>
@@ -29,10 +29,10 @@
          </div>
     </nav>
     <div class="img">
-        <img src="C:\Users\Superuser\Desktop\New folder\zoho\b.jpeg.jpeg"> 
+        <img src="b.jpeg.jpeg"> 
     </div> 
     <div class="img-r">
-        <img src="C:\Users\Superuser\Desktop\New folder\zoho\h.jpeg.jpeg">
+        <img src="zoho\h.jpeg.jpeg">
     </div>
     <div class="text">
     <h1 id="h"><b>Casinal Educations<br>Coachings</b></h1>
@@ -56,11 +56,11 @@
     <br><br><br>
     </div>
     <div class="img-a">
-        <img src="C:\Users\Superuser\Desktop\New folder\zoho\a.jpeg.jpeg">
+        <img src="a.jpeg.jpeg">
         <br><br><br><br><br>
     </div>
     <div class="img-b">
-        <img src="C:\Users\Superuser\Desktop\New folder\zoho\d.jpeg.jpeg">
+        <img src="d.jpeg.jpeg">
         <br><br><br><br><br>
      </div>   
     <div id="footer">
