--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <h1 id="abt">ABOUT US</h1>
     <p id="pa">Our Coaching Center is a Term For Educational Institutes that Offer classes for almost all the Subjects.We Prepare Students for Specific Examinations and Tests.</p>
     <div class="img-abt">
-    <img src="C:\Users\Superuser\Desktop\New folder\zoho\image\about.jpeg.jpeg" width="300px" height="300px">
+    <img src="about.jpeg.jpeg" width="300px" height="300px">
     </div>
     <div class="container">
     <p>Coaching centres offer classes as per subjects and help students to prepare well. Coaching centres offering specialized classes for Joint and Management entrances are already very popular. In the last few years many students have cracked entrance exams successfully after studying at these coaching centres.
