--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
             <i class="fa fa-bars"></i>
         </label>
         <ul class="c">
-            <li><img src="C:\Users\Superuser\Desktop\New folder\zoho\c.jpeg.jpeg" width="150px" height="50px"></li>
+            <li><img src="c.jpeg.jpeg" width="150px" height="50px"></li>
          </ul>
         
          <ul>   
@@ -42,7 +42,7 @@
     </nav>
     <h1 id="abt">CONTACT US</h1>
      <!--<div class="cnctus">
-            <img src="C:\Users\Superuser\Desktop\New folder\zoho\image\cnctus.jpeg.jpeg" width="60%" >
+            <img src="cnctus.jpeg.jpeg" width="60%" >
     </div>-->   
     <div>
         <div class="banner">
