--- a/our services.html
+++ b/our services.html
@@ -21,7 +21,7 @@
             <i class="fa fa-bars"></i>
         </label>
         <ul class="c">
-            <li><img src="C:\Users\Superuser\Desktop\New folder\zoho\image\c.jpeg.jpeg" width="150px" height="50px"></li>
+            <li><img src="c.jpeg.jpeg" width="150px" height="50px"></li>
          </ul>
          <ul>   
             <li><a href="index.html"><font color="red">HOME</font></a></li>
