--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="b.jpeg.jpeg"> 
     </div> 
     <div class="img-r">
-        <img src="zoho\h.jpeg.jpeg">
+        <img src="h.jpeg.jpeg">
     </div>
     <div class="text">
     <h1 id="h"><b>Casinal Educations<br>Coachings</b></h1>
