--- a/our services.html
+++ b/our services.html
@@ -44,11 +44,11 @@
     </p>
     </div>
         <div class="img-a">
-        <img src="C:\Users\Superuser\Desktop\New folder\zoho\image\a.jpeg.jpeg">
+        <img src="a.jpeg.jpeg">
         <br><br><br><br><br>
     </div>
     <div class="img-b">
-        <img src="C:\Users\Superuser\Desktop\New folder\zoho\image\d.jpeg.jpeg">
+        <img src="d.jpeg.jpeg">
         <br><br><br><br><br>
     </div>   
     <div id="footer">
