--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          </div>
     </nav>
     <div class="img">
-        <img src="res.jpeg.jpeg"> 
+        <img src="res.jpeg.jpg"> 
     </div> 
     <div class="img-r">
         <img src="h.jpeg.jpeg">
