--- a/about.html
+++ b/about.html
@@ -18,11 +18,9 @@
         <label class="icons">
             <i class="fa fa-bars"></i>
         </label>
-        <ul class="c">
-            <li><img src="c.jpeg.jpeg" width="150px" height="50px"></li>
-         </ul>
+        
          <ul>   
-            <li><a href="index.html"><font color="red">HOME</font></a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="our services.html">SERVICES</a></li>
             <li><a href="#">BLOG</a></li>
