--- a/our services.html
+++ b/our services.html
@@ -22,7 +22,7 @@
         </label>
         
          <ul>   
-            <li><a href="index.html"><font color="red">HOME</font></a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="our services.html">SERVICES</a></li>
             <li><a href="#">BLOG</a></li>
