--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,7 @@
         
         
          <ul>   
-            <li><a href="index.html"><font color="red">HOME</font></a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="our services.html">SERVICES</a></li>
             <li><a href="#">BLOG</a></li>
