--- a/our services.html
+++ b/our services.html
@@ -24,7 +24,7 @@
          <ul>   
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="our services.html">SERVICES</a></li>
+		 <li><a href="our services.html"><font color="orange">SERVICES</font></a></li>
             <li><a href="#">BLOG</a></li>
             <li><a href="contactus.html">CONTACT US</a></li>
         </ul>
