--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </label>
         
          <ul>   
-            <li><a href="#"><font color="orange">HOME</font></a></li>
+            <li><a href="#"><font color="yellow">HOME</font></a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="our services.html">SERVICES</a></li>
             <li><a href="#">BLOG</a></li>
