--- a/contactus.html
+++ b/contactus.html
@@ -28,7 +28,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="our services.html">SERVICES</a></li>
             <li><a href="#">BLOG</a></li>
-		 <li><a href="contactus.html"><font color="orange">CONTACT US</font></a></li>
+		 <li><a href="contactus.html"><font color="yellow">CONTACT US</font></a></li>
         </ul>
         <div class="socialtop">
                 <a href="#"><i class="fa fa-facebook "></i></a>
