--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div class="img">
         <img src="res.jpeg.jpg"> 
     </div> 
+    <div class="container">
+    </div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
     
     
